# hamstercage

./: Pipfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
hamstercage/: __init__.py  __main__.py  hamstercage_exception.py  manifest.py  utils.py
hamstercage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hamstercage/tests/: hamstercage.yaml  manifest.yaml  test_hamstercage.py  test_manifest.py  test_utils.py
hamstercage/tests/repo/tags/all/: missing-in-target.txt  one.txt  two.conf
hamstercage/tests/repo/tags/foo/: two.conf
