
[project]
name = "hamstercage"
version = "0.0.2"
description = "Pets not cattle. A straightforward way to manage configuration files."
authors = [
    {name = "Stefan Bethke", email = "stb@lassitu.de"}
]
license.text = "Apache2.0"
readme = "README.md"
keywords = [ "configuration-management" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.urls]
homepage = "https://hamstercage.io"
repository = "https://github.com/hamstercage/hamstercage/"
documentation = "https://hamstercage.io"

[dependencies]
"pyyaml" = "^6.0"

[dev-dependencies]
build = "^0.7"
wheel = "^0.37.1"
pytest = "^7.1.2"
twine = "^4.0"

[scripts]
hamstercage = "hamstercage:__main__.main"

[tool.poetry]
authors = ["Stefan Bethke <stb@lassitu.de>"]
description = "Pets not cattle. A straightforward way to manage configuration files."
name = "hamstercage"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^6.0"
[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
