
[project]
# poetry ignores this section and uses it's own with a slightly different set of attributes.
name = "hamstercage"
version = "0.0.2"
description = "Pets not cattle. A straightforward way to manage configuration files."
authors = [
    {name = "Stefan Bethke", email = "stb@lassitu.de"}
]
license.text = "Apache2.0"
readme = "README.md"
keywords = [ "configuration-management" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.urls]
# poetry ignores this section and uses it's own with a slightly different set of attributes.
homepage = "https://hamstercage.io/"
repository = "https://github.com/hamstercage/hamstercage/"
documentation = "https://hamstercage.io/documentation/"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependencies]
# poetry ignores this section and uses it's own.
python = "^3.8"
PyYAML = "^6.0"
importlib-resources = "^5.7.1"

[dev-dependencies]
# poetry ignores this section and uses it's own.
pytest = "^7.1.2"
black = "^22.3.0"
coverage = "^6.4"

[scripts]
# poetry ignores this section and uses it's own.
hamstercage = "hamstercage:__main__.main"

[tool.poetry]
authors = ["Stefan Bethke <stb@lassitu.de>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
description = "Pets not cattle. A straightforward way to manage configuration files."
documentation = "https://hamstercage.io/documentation/"
homepage = "https://hamstercage.io/"
keywords = [ "configuration-management" ]
license = "Apache2.0"
name = "hamstercage"
readme = "README.md"
repository = "https://github.com/hamstercage/hamstercage/"
version = "0.0.4"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
importlib-resources = "^5.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
coverage = "^6.4.1"

[tool.poetry.scripts]
hamstercage = "hamstercage:__main__.main"
