;from setuptools import find_packages, setup
;
;setup(
;    name='hamstercage',
;    packages=find_packages(),
;    entry_points = {
;        'console_scripts': ['hamstercage=hamstercage'],
;    }
;)

[metadata]
name = hamstercage
version = 0.0.1

[options]
packages = hamstercage
install_requires =
    pyyaml
    importlib-metadata; python_version < "3.8"

[options.entry_points]
console_scripts =
    hamstercage = hamstercage:__main__.main